err/pythoneon.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/canal08.py'...
***   File "./lib/python3.5/site-packages/canal08.py", line 15
    print "Le module 'serie' manque"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/controle.py'...
***   File "./lib/python3.5/site-packages/controle.py", line 51
    print lpythons
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/enregistrer08.py'...
***   File "./lib/python3.5/site-packages/enregistrer08.py", line 64
    print "debut  >  duree du fichier"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/live.py'...
***   File "./lib/python3.5/site-packages/live.py", line 43
    print u"Audio : version stéréo uniquement"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/origine.py'...
***   File "./lib/python3.5/site-packages/origine.py", line 10
    print "N'utiliser que 'Origine0' ('Origine' a besoin de 'serie.py')"
                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/partition.py'...
***   File "./lib/python3.5/site-packages/partition.py", line 65
    print "Donner un nom-souche valable"
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pythoneon-18.1.13.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Compiling './lib/python3.5/site-packages/versionneur.py'...
***   File "./lib/python3.5/site-packages/versionneur.py", line 85
    print "fairecopienumero:", A
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
